XMLExper/m12/m12_487_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘tinyxml2::XMLDeclaration* tinyxml2::XMLElement::InsertNewDeclaration(const char*)’:
tinyxml2.cpp:2073:33: error: invalid conversion from ‘tinyxml2::XMLNode*’ to ‘tinyxml2::XMLDeclaration*’ [-fpermissive]
 2073 |     return InsertEndChild(node) ? /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(node) : 0;
      |            ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                 |
      |                                 tinyxml2::XMLNode*
diff: tinyxml2.o: No such file or directory
